--- a/src/App.css
+++ b/src/App.css
@@ -251,13 +251,26 @@ body {
 }
 .spinner-small {
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #eee; 
-    border-radius: 50%; 
-    width: 20px; 
-    height: 20px; 
-    animation: spin 0.8s linear infinite; 
-    display: inline-block; 
-    margin-left: 10px; 
+    border-left-color: #eee;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+    margin-left: 10px;
+    -webkit-animation: spin 0.8s linear infinite;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg)   ;
+        -webkit-transform: rotate(0deg)   ;
+        -moz-transform: rotate(0deg)   ;
+        -ms-transform: rotate(0deg)   ;
+        -o-transform: rotate(0deg)   ;
+}
+    100% {
+        transform: rotate(360deg); 
+    }
 }
 
 @media (max-width: 768px) {
